--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "@angular/forms": "^6.0.2",
     "@angular/http": "^6.0.2",
     "@angular/material": "^6.1.0",
+    "@angular/material-moment-adapter": "^6.1.0",
     "@angular/platform-browser": "^6.0.2",
     "@angular/platform-browser-dynamic": "^6.0.2",
     "@angular/router": "^6.0.2",
     "core-js": "^2.5.4",
     "hammerjs": "^2.0.8",
+    "moment": "^2.22.1",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
